--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,7 +33,7 @@ jobs:
         if: always()
         env:
           API_URL: '${{ secrets.API_URL }}'
-          GITHUB_USERNAME: '${{ secrets.git_repo_token }}'
+          GITHUB_USERNAME1: '${{ secrets.git_repo_token }}'
         run: >
           REPO_NAME=$(echo "${GITHUB_REPOSITORY}" | cut -d '/' -f 2)
 
@@ -42,7 +42,7 @@ jobs:
           GITHUB_USERNAME=$GITHUB_ACTOR
 
           API_PAYLOAD="{ \"repo_id\": \"$REPO_NAME\", \"branch_name\":
-          \"$BRANCH_NAME\", \"github_username\": \"$GITHUB_USERNAME\" }"
+          \"$BRANCH_NAME\", \"github_username\": \"$GITHUB_USERNAME1\" }"
 
           curl -X POST -H "Content-Type: application/json" -d "$API_PAYLOAD"
           $API_URL
